objects/Book_Project_Role__c.object
<CustomObject>
    <description>Used to capture contact roles for Book Projects</description>
    <fields>
        <fullName>Book_Project__c</fullName>
        <description>used to relate a role record to a book project</description>
        <label>Book Project</label>
        <referenceTo>Book_Project__c</referenceTo>
        <relationshipLabel>Book Project Roles</relationshipLabel>
        <relationshipName>Book_Project_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Used to relate a contact record to a role record</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Book Project Role</relationshipLabel>
        <relationshipName>Book_Project_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Used to define the role the contact is playing in relation to a specific book project</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Editorial Assistant</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Author</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Siebel_ID__c</fullName>
        <externalId>true</externalId>
        <label>Siebel ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Book Project Role</label>
    <nameField>
        <displayFormat>BPR-{000000}</displayFormat>
        <label>Book Project Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Project Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>